samples/_failures_safe/1761506393_5a17ca_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1aa01285.c: In function ‘main’:
./samples/SAFE/__tmp_1aa01285.c:170:13: error: expected declaration or statement at end of input
  170 |             sm.handler(&sm, &events[i]);
      |             ^~
./samples/SAFE/__tmp_1aa01285.c:170:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1aa01285.c:170:13: error: expected declaration or statement at end of input
